@@ -1,3 +1,8 @@
+Tue Jul 20 11:27:18 2010  Evan Phoenix  <evan@ruby-lang.org>
+
+	* gem_prelude.rb: Pull in rubygem's custom require
+	* lib/rubygems.rb: Handle always having custom require available
+
 Tue Jul 20 18:39:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/ruby.h (RSTRING_GETMEM): new macro to get ptr and
